# nodus

./: .eslint-allowlist.json  .eslint-override.ci.json  .eslint.config.exception.js  .gemini-sync.json  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_MANDATES.md  DEVELOPMENT.md  FILE_STRUCTURE.md  GEMINI.md  GEMINI_EDITOR_IMPLEMENTATION.md  GEMINI_VSCode_Instructions.md  LICENSE  README.md  SECURITY_ADDENDUM.md  babel.config.js  debugging.txt  environment.config.js  eslint.config.js  files.md  home.css  home.html  immediate.txt  index.html  jest.config.js  jsdoc.json  mess.txt  package-lock.json  package.json  plans.txt  read.txt  reveiew.txt  vite.config.js
.copilot/: agent.json  file structure.md  file-structure-overview.md  project-context.md
.github/: .gitignore  copilot-instructions.md
.github/chatmodes/: linter.chatmode.md
.husky/: post-commit
__DEPRECATED__/: DOCUMENTATION_PLAN.md  agent.json  copilot-instructions.md  final-hardening-checklist (1).md  implement.chatmode.md  lint-file.prompt.md  linting.chatmode.md  nodus_v7_3_defense_temporal_ultimate.sql  nodus_v7_4_universal_enhancement (1).sql  schema-update.sql
__DEPRECATED__/tauri stack/: COMPLETE_DELIVERABLES_MANIFEST.md  Cargo_final.toml  RUST_MIGRATION_COMPLETE.md  automatic_instrumentation.rs  classification_crypto.rs  commands_data.rs  commands_mod.rs  commands_mod_final.rs  enterprise_api_gateway.rs  enterprise_mod.rs  enterprise_multi_tenant.rs  enterprise_plugin_system.rs  license_mod.rs  post_quantum_security.rs  response_cache.rs  rust-observability-toolkit-CONTRIBUTING.md  rust-observability-toolkit-Cargo.toml
db/: 002_cds_workflow.sql  nodus.sql
dev/: DeveloperDashboard.js
docker/: nodus.sql
docker/services/: docker-compose.yml
docs/: NODUS_DEVELOPER_MIGRATION_GUIDE.md  NODUS_DEVELOPER_SECURITY_MANDATES.md  architecture.txt  caching helper.txt  lint-helpers.txt  nodus_observability_implementation_plan_v2.md  observability extension.txt
docs/-- plans --/: ideas.txt  logging and auditing.txt
docs/architecture/: SYSTEM_ARCHITECTURE.md  UI_UX_SPECIFICATION.md  nodus_three_tier_implementation_plan_updated.md
docs/development/: DEVELOPMENT_GUIDE.md  GEMINI.md
docs/docs/: ARCHITECTURE_TRANSFORMATION_COMPLETE.md  DEVELOPER_MANDATES.md  phase1.txt
docs/features/: LOGGING_AUDITING_SYSTEM.md
docs/jsdocs/: MainView.html  core_database_db.js.html  core_database_schema.js.html  core_editor_schema.js.html  core_models_event.js.html  core_models_field-definition.js.html  core_models_item.js.html  core_models_tag.js.html  core_viewmodels_event-vm.js.html  global.html  index.html  ui_views_main-view.js.html
js/: app.js
js/database/: db.js  schema.js
js/models/: item.js
js/viewmodels/: app-vm.js  item-vm.js  tag-vm.js
js/views/: main-view.js
model/: transation-model.js
public/: home.css  home.html  index.html
scripts/: generate-jsdoc-stubs.js  main.css  observability-smoke.js  quickfix-secure-wrap.js  run-eslint-secure.js  secure-refactor-dom.js  security-attest-auto-remediate.js  security-review.js  setup.js  sync-ai-docs.js  sync-ai-documentation.js
server/: index.js
server/routes/: cds.js
src/: main.js
src-tauri/: Cargo.toml
src-tauri/db/: 001_security_polyinstantiation.sql  003_crypto_domains.sql  004_add_polyinstantiation.sql  005_add_app_domains.sql
src-tauri/nodus-engine/: Cargo.toml  tauri.conf.json
src-tauri/nodus-engine/src/: commands_observability.rs  commands_security.rs  compliance_dashboard.rs  lib.rs  main_integrated.rs  metrics_registry.rs  multi_tenant.rs  observability_mod.rs  plugin_system.rs  privacy_ad_platform.rs  self_optimizing_database.rs  zero_downtime_reconfig.rs
src-tauri/nodus-engine/src/commands/: license.rs
src-tauri/nodus-engine/src/database/: database_mod.rs  db_optimization_analyzer.rs  mod.rs
src-tauri/nodus-engine/src/enterprise/: compliance_dashboard.rs
src-tauri/nodus-engine/src/license/: mod.rs
src-tauri/nodus-engine/src/networking/: mod.rs  response_cache.rs
src-tauri/nodus-engine/src/observability/: automatic_instrumentation.rs  forensic_logger.rs  instrument.rs  metrics_registry.rs  mod.rs  temporal_forensic_engine.rs
src-tauri/nodus-engine/src/policy/: nodus_system_policy.toml  policy-layer.rs  policy-snapshot.rs  policy_engine.rs
src-tauri/nodus-engine/src/security/: ai_security_oracle.rs  classification_crypto.rs  mac_engine.rs  mod.rs  security_manager.rs
src-tauri/nodus-engine/src/state/: dispatch.rs  mod.rs
src-tauri/nodus-engine/src/storage/: storage_mod.rs  sync_mod.rs  validation_mod.rs
src-tauri/src/: Cargo.toml  main.rs
src-tauri/tauri stack/: CLAUDES_SIGNATURE_FEATURES.md  FINAL_SUMMARY_LEGENDARY_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  RUST_COMMUNITY_GIFT.md  THE_ULTIMATE_NODUS_PLATFORM.md  commands_license.rs  database_mod.rs  forensic_logger.rs  main_integrated.rs  migration_progress_update.md  networking_mod.rs  rust-observability-toolkit-README.md  rust-observability-toolkit-benchmarks.rs  rust-observability-toolkit-examples.rs  rust-observability-toolkit-lib.rs  rust_migration_roadmap.md  state_mod.rs  unified_policy_engine.rs
src/app/: main.js
src/core/: ActionHandlerRegistry.js  AdaptiveRenderer.js  BuildingBlockRenderer.js  ComponentDefinition.js  ConditionRegistry.js  ConditionSchema.json  DatabaseOptimizer.js  EnhancedGridRenderer.js  ErrorHelpers_EventFlow.js  EventFlowEngine.js  ExtensionManager.js  ForensicLogger.js  HybridStateManager.js  HybridStateManager_ModernStorage.js  ManifestPluginSystem.js  OptimizationAccessControl.js  OptimizationWebSocketServer.js  PluginManifestSchema.js  RenderContext.js  RenderContext_PolicyHelpers.js  ServiceRegistry.js  SystemBootstrap.js  SystemPoliciesCached.js  SystemPolicies_Cached.js  TenantPolicyService.js  app.js  multitenantExtensions and code validation.txt
src/database/: db.js
src/docs/: DEVELOPMENT_GUIDE.md  (+4 more)
tests/: GEMINI.md  _helpers.js  test plan.txt
tools/: .eslint-allowlist.json  .eslint-override.ci.json  eslint.config.js  jsdoc.json  vite.config.js
viewmodel/: transaction-viewmodel.js
(+352 files in other folders)
