[package]
name = "nodus-security-core"
version = "8.0.0"
description = "Enterprise Security Platform with MAC Enforcement"
authors = ["Nodus Team"]
license = "MIT"
repository = "https://github.com/nodus/security-platform"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
dashmap = "5.5"
lru = "0.12"
async-trait = "0.1"

# Security-specific crates
ring = "0.17"
constant_time_eq = "0.3"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
secrecy = { version = "0.8", features = ["serde"] }

# Enterprise features (feature-gated)
# Add these for enterprise tier
enterprise-metrics = { version = "0.1", optional = true }
policy-engine = { version = "0.1", optional = true }

[features]
default = ["consumer"]
consumer = []
enterprise = ["enterprise-metrics", "policy-engine"]
defense = ["enterprise", "classification-crypto"]
classification-crypto = []

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }