[package]
name = "nodus-enterprise"
version = "8.0.0"
description = "Nodus Enterprise - Defense-Grade Security Platform with Single Front-Door Architecture"
authors = ["Nodus Team <team@nodus.dev>"]
license = "Commercial"
repository = "https://github.com/nodus/nodus-enterprise"
edition = "2021"
rust-version = "1.75"

[lib]
name = "nodus_enterprise"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nodus-enterprise"
path = "src/main.rs"

# Feature flags - lean defaults, opt-in to power
[features]
default = ["core"]
core = []

# Observability exporters (heavy - off by default)
# observability_prometheus = ["metrics-exporter-prometheus", "axum"]
# observability_jaeger = ["tracing-opentelemetry", "opentelemetry-jaeger"]
# observability_otlp = ["tracing-opentelemetry", "opentelemetry-otlp"]

# Plugin systems (security-sensitive - off by default)
# plugins_wasm = ["wasmtime", "wasm-bindgen"]
plugins_native = [] # Dangerous - enterprise only

# Enterprise features
enterprise = ["multi-tenant", "compliance-dashboard"]
multi-tenant = []
compliance-dashboard = []
 # api-gateway = ["axum", "tower", "tower-http"]

# Experimental features (off by default)
# pqc_experimental = ["pqc_kyber", "pqc_dilithium"]
ai_security_oracle = [] # Requires special licensing

# Database options (choose ONE)
# database_postgresql = ["sqlx/postgres"]
# database_sqlite = ["sqlx/sqlite"]
# database_mysql = ["sqlx/mysql"]

[build-dependencies]
tauri-build = { version = "1.5", features = ["codegen"] }

[dependencies]
# Core Tauri (NO api-all - explicit permissions only)
tauri = { version = "1.5", features = [
    "cli",
    "dialog-ask",
    "dialog-confirm", 
    "dialog-message",
    "http-request",
    "notification-all",
    "path-all",
    "protocol-asset",
    "system-tray",
    "updater",
    "window-all",
] }

# Async runtime
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "sync",
    "time",
    "signal",
] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1"

# Lock-free data structures
arc-swap = "1.7"
once_cell = "1.19"

# Observability core
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json", 
    "env-filter",
    "registry",
] }
metrics = "0.22"

# Optional observability exporters
# metrics-exporter-prometheus = { version = "0.13", optional = true }
# tracing-opentelemetry = { version = "0.22", optional = true }
# opentelemetry-jaeger = { version = "0.20", optional = true }
# opentelemetry-otlp = { version = "0.21", optional = true }

# Database (choose ONE stack)
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Security and crypto
ring = "0.17"
rustls = { version = "0.22", features = ["ring"] }
rustls-webpki = "0.102"
base64 = "0.21"
hex = "0.4"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
constant_time_eq = "0.3"

# Post-quantum crypto (experimental)
# pqc_kyber = { version = "0.7", optional = true }
# pqc_dilithium = { version = "0.5", optional = true }

# Time and UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
    "gzip",
] }

# Optional HTTP server (for enterprise features)
# axum = { version = "0.7", optional = true, features = ["http2"] }
# tower = { version = "0.4", optional = true }
# tower-http = { version = "0.5", optional = true, features = ["cors", "trace"] }

# WASM runtime (optional)
# wasmtime = { version = "14.0", optional = true }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = [
    "IdbDatabase",
    "IdbObjectStore",
    "IdbRequest",
    "IdbTransaction",
    "IdbIndex",
    "IdbObjectStoreParameters",
    "IdbIndexParameters",
    "IdbTransactionMode",
    "Window",
    "console",
] }

# WASM-helpers for serializing/deserializing between JS and Rust
serde-wasm-bindgen = "0.6"

# Least-recently-used cache used across several components (make non-optional)
lru = "0.8"

# Error handling
thiserror = "1.0"
color-eyre = "0.6"

# Utilities
parking_lot = "0.12"
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
rstest = "0.18"

# Profiles
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = "thin"
panic = "abort"
codegen-units = 1

# Security-optimized profile
[profile.security]
inherits = "release"
opt-level = "s"  # Optimize for size (smaller attack surface)
lto = "fat"      # Full LTO for maximum optimization
strip = true     # Strip debug symbols

[workspace]
# Local development: restrict workspace to this crate only because the
# referenced `crates/` members are not present in this working copy.
# Restore the original workspace member list when the other crates are
# added back to `src-tauri/nodus-engine/crates/`.
members = ["."]
resolver = "2"

# Package metadata
[package.metadata.tauri]
bundle = true
updater = true

[package.metadata.bundle]
name = "Nodus Enterprise Platform"
identifier = "com.nodus.enterprise"
version = "8.0.0"
copyright = "© 2024 Nodus Technologies. All rights reserved."
category = "Productivity"
short_description = "Defense-grade enterprise security platform"
long_description = """
Nodus Enterprise Platform provides defense-grade security with single front-door architecture,
lock-free policy management, zero-overhead observability, and comprehensive audit capabilities.
Built with Rust for maximum security and performance.
"""

# Linting (enforce security)
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
# Security-critical lints
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
integer_overflow = "deny"
indexing_slicing = "warn"

# Code quality
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
